--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +20,8 @@
     "mysql2": "^2.3.3",
     "passport": "^0.5.3",
     "passport-jwt": "^4.0.0",
-    "sequelize": "^6.19.2"
+    "sequelize": "^6.19.2",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.4.1"
