--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport": "^0.5.3",
     "passport-jwt": "^4.0.0",
     "sequelize": "^6.19.2",
+    "socket.io": "^4.5.1",
     "validator": "^13.7.0"
   },
   "devDependencies": {
